Fixed issues on Chrome that closes menu when scrolling Removed horizontal scrollbar Known issue: Keyboard arrows not working

--- a/src/timepicker.less
+++ b/src/timepicker.less
@@ -13,6 +13,7 @@ div.timepicker {
         overflow: scroll;
         box-shadow: 0 0 3px 0 rgba(0,0,0,0.1);
         background: #fff;
+        overflow-x: hidden;
         
         > li {
             height: 40px;
